Closed Bug 126981 Opened 24 years ago Closed 24 years ago

anchors in HTML mails broken

Categories

(MailNews Core :: Networking: IMAP, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla0.9.9

People

(Reporter: bugzilla, Assigned: mscott)

References

Details

(Keywords: regression)

Attachments

(1 file)

This seems to have happend after the last checkin to the IMAP code (rfc2026). If a HTML mail have internal anchors you get IMAP errors when pressing them: One of the links in my HTMl mail is to an anchor called "#afsnit-2". The complete link is: imap://hege@tarkin.int.tele.dk:143/fetch%3EUID%3E/INBOX/projects/test%3E4#afsnit-2 This produces: 1220[1f87cf8]: tarkin.int.tele.dk:S-INBOX/projects/test:SendData: 170 UID fetch 4#afsnit-1 (UID RFC822.SIZE BODY[]) 1220[1f87cf8]: tarkin.int.tele.dk:S-INBOX/projects/test:CreateNewLineFromSocket: 170 BAD Protokolfejl: "Expected SPACE not found" 20020220
anchors in html mail broke due to some string comparison changes in nsDocShell on the 19th I think. We keep returning out of the scroll to anchor code early in this new clause: if (Substring(currentLeftStart, currentLeftEnd).Equals(sNewLeft)) { return NS_OK; // URIs not the same } if I bypass these lines we properly scroll to the anchor.
Status: NEW → ASSIGNED
Keywords: nsbeta1, regression
Summary: anchors in HTML mails now produces IMAP errors → anchors in HTML mails broken
Target Milestone: --- → mozilla0.9.9
I'm pretty sure the logic in this line is backwards. It's returning if the two strings are equal and I think we want to be returning if they aren't equal. patch coming up.
Attached patch the fixSplinter Review
*** Bug 126646 has been marked as a duplicate of this bug. ***
Comment on attachment 70783 [details] [diff] [review] the fix dammit you beat me to it! I had just fixed this when I got the bugmail! sr=alecf of course
Attachment #70783 - Flags: superreview+
Comment on attachment 70783 [details] [diff] [review] the fix a=shaver for 0.9.9, etc.
Attachment #70783 - Flags: approval+
fix checked in.
Status: ASSIGNED → RESOLVED
Closed: 24 years ago
Keywords: nsbeta1nsbeta1+
Resolution: --- → FIXED
i believe this fixed bug 127134 as well?
*** Bug 127163 has been marked as a duplicate of this bug. ***
*** Bug 127134 has been marked as a duplicate of this bug. ***
*** Bug 126900 has been marked as a duplicate of this bug. ***
*** Bug 127251 has been marked as a duplicate of this bug. ***
not working in 2002022203 the fix should be in because I'm not longer getting IMAP error.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
anchors are now working again in the browser and in mailnews using 2002022203 bits. Let's track any different issues you are having in a new bug.
Status: REOPENED → RESOLVED
Closed: 24 years ago24 years ago
Resolution: --- → FIXED
defined working in mail&news? clicking on a IMAP link in a HTML mail like: imap://hege@tarkin.int.tele.dk:143/fetch%3EUID%3E/INBOX/projects/test%3E4#afsnit-2 does nothing...
I define working as in: clicking on a link an html message which refers to an anchor in that message. Same test case but in the browser too. In the browser clicking on an anchor url did not scroll directly to the anchor. I took over this bug to fix broken anchors for mail and the browser. It was broken in yesterdays bits and this patch fixed it. We properly scroll to that anchor again for both the mail and the browser case.
ok. will open new bug since it's not working in my HTML mail...
Status: RESOLVED → VERIFIED
*** Bug 127169 has been marked as a duplicate of this bug. ***
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: