Bug #126981 --> make HTML anchors work again by reversing the logic on an if clause. r=sspitzer sr=alecf a=shaver